Add missing DidFinishNavigation call

Fix Error handling, so didFinishNavigation is called when a response is
canceled.

BUG=809557

Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Icee04cd3bcf10110bc7d53a62df2234bc3065050
Reviewed-on: https://chromium-review.googlesource.com/959590
Commit-Queue: Mohammad Refaat <mrefaat@chromium.org>
Reviewed-by: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544114}
Former-commit-id: cf7702c8359306643d7858fa37019af4ebe62812